metrics/ingress_prometheus.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: prometheus-dashboard
  namespace: monitoring
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`prometheusleo.local`)
      kind: Rule
      services:
        - name: prometheus-operated
          port: 9090
  tls:
    secretName: prometheusleo-local-cert
    options:
      name: tls-prometheus
      namespace: monitoring
